# djangocodemirror

./: .gitignore  .gitmodules  ISSUES.rst  LICENCE.txt  MANIFEST.in  Makefile  README.rst  __init__.py  fields.py  minify.sh  pre-commit.py  setup.cfg  setup.py  tox.ini  views.py
compass/: config.rb
compass/scss/: djangocodemirror.scss
compass/scss/components/: _codemirror.scss
djangocodemirror/: __init__.py  assets.py  config.py  config.rb  crumbs.py  exceptions.py  fields.py  forms.py  helper.py  manifest.py  models.py  settings.py  settings_local.py  tests.py  urls.py  views.py  widgets.py
djangocodemirror/static/css/: djangocodemirror.css
djangocodemirror/static/djangocodemirror/: buttons.js  csrf.js  djangocodemirror.css  (+7 more)
djangocodemirror/templatetags/: djangocodemirror.py  djangocodemirror_assets.py  djangocodemirror_inputs.py  djangocodemirror_tags.py
docs/: Makefile  changelog.rst  conf.py  configurations.rst  development.rst  django_settings.py  example.rst  examples.rst  index.rst  install.rst  requirements.txt  settings.rst
docs/library_references/: assetrender.rst  assets.rst  fields.rst  helper.rst  manifest.rst  settings.rst  templatetags.rst  widgets.rst
project_test/: pytest.ini
project_test/project/: djangocodemirror_app_settings.py  forms.py  settings.py  settings_demo.py  settings_django16.py  urls.py  views.py
project_test/tests/: conftest.py  test_001_ping_urls.py
requirements/: tests.txt
sandbox/: urls.py  views.py  wsgi.py
sandbox/demo_datas/: html.txt  python.txt  restructuredtext.txt
sandbox/settings/: base.py  demo.py  djangocodemirror_app.py  tests.py
sandbox/templates/: homepage.html
static/djangocodemirror/: buttons.js  djangocodemirror.css  djangocodemirror.fr.js  djangocodemirror.js  djangocodemirror.translation.js  syntax_methods.js
templates/djangocodemirror/: help.rst  sample.html
tests/: conftest.py  test_001_ping_urls.py  utils.py
tests/001_manifest/: test_002_js.py  test_003_css.py  test_005_helper.py
tests/002_forms/: test_001_widget.py  test_002_fields.py  test_003_forms.py
tests/003_templatetags/: test_001_asset_tag_render.py  test_001_input_config.py  test_002_js_assets.py  test_003_css_assets.py  test_004_codemirror_instance.py
(+45 files in other folders)
