;;
;; DjangoCodemirror package
;;
[metadata]
name = djangocodemirror
version =2.0.0
description = Django CodeMirror is a Django application to embed CodeMirror
long_description = file:README.rst
long_description_content_type = text/x-rst
author = David Thenon
author_email = sveetch@gmail.com
url = https://github.com/sveetch/djangocodemirror
license = MIT
keywords = Django, CodeMirror
classifiers =
    Programming Language :: Python
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Framework :: Django
    Framework :: Django :: 1.10
    Framework :: Django :: 1.11
    Intended Audience :: Developers
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Text Editors :: Text Processing
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = True
install_requires =
    Django>=1.11
packages = find:
zip_safe = True

[options.extras_require]
dev =
    flake8
    pytest
    pytest-django
    sphinx
    sphinx-rtd-theme

[options.packages.find]
where = .
exclude=
    data
    docs
    tests
    sandbox

[wheel]
universal = 1

;;
;; Third-party packages configuration
;;
[flake8]
max-line-length = 80
exclude =
    .git,
    .venv,
    build,
    venv,
    __pycache__,
    node_modules,
    */migrations/*

[tool:pytest]
DJANGO_SETTINGS_MODULE = sandbox.settings.tests
addopts = -vv
python_files =
    test_*.py
    tests.py
testpaths =
    tests

[tox:tox]
minversion = 3.4.0
envlist = py{27}-django{110,111},py35-django{110,111,200,210}

[testenv]
# changedir = sandbox
# Get the right django version following the current env
deps =
    django110: Django>=1.10,<1.11
    django111: Django>=1.11,<2.0
    django200: Django>=2.0,<2.1
    django210: Django>=2.1,<2.2

commands =
    pip install -e .[dev]
    pytest -vv tests
